// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmDetails /> does not render CPU and Memory settings for VM without custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-off"
              />
              Off
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders CPU and Memory settings for VM with custom flavor 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-on-running"
              />
              Running
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
                <div>
                  2 CPU, 4G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders IP addresses correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-on-running"
              />
              Running
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              172.17.0.15, 172.17.0.16, 172.17.0.17
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-off"
              />
              Off
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders description correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              This VM has a description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-off"
              />
              Off
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders off status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-off"
              />
              Off
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders on status correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-on-running"
              />
              Running
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmDetails /> renders values from labels correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd>
          my-vm
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-details__description"
          >
            <div>
              VM has no description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Status
            </dt>
            <dd>
              <span
                aria-hidden="true"
                class="kubevirt-vm-status__icon pficon pficon-on-running"
              />
              Running
            </dd>
            <dt>
              Operating System
            </dt>
            <dd>
              fedora29
            </dd>
            <dt>
              IP Addresses
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd>
              generic
            </dd>
            <dt>
              Template
            </dt>
            <dd>
              default/fedora-generic
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              FQDN
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Namespace
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Pod
            </dt>
            <dd>
              ---
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Node
            </dt>
            <dd>
              ---
            </dd>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div />
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;
